cicd-main/cicd-main/flask-service.yml
# NodePort
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask
spec:
  selector:
    app: flask  # Matches the labels in your deployment
  ports:
    - port: 8080           # The port that the service will expose
      targetPort: 8888     # The port on the pod that should receive traffic
